--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ image = "0.24" # For loading window icon
 wayland-client = { version = "0.31", default-features = false }
 tempfile = "3.8"
 
+[build-dependencies]
+pkg-config = "0.3"
+
 [workspace]
 members = [
     "test-client"
