--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ env:
 jobs:
   build-macos:
     runs-on: macos-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -23,34 +25,20 @@ jobs:
         run: brew install libxkbcommon pixman pkg-config
 
       - name: Build for arm64
-        run: |
-          rustup target add aarch64-apple-darwin
-          cargo build --release --target aarch64-apple-darwin
-
-      - name: Build for x86_64
-        run: |
-          rustup target add x86_64-apple-darwin
-          cargo build --release --target x86_64-apple-darwin
-
-      - name: Create Universal Binary
-        run: |
-          mkdir -p target/universal-apple-darwin/release
-          lipo -create \
-            target/aarch64-apple-darwin/release/cocoa-way \
-            target/x86_64-apple-darwin/release/cocoa-way \
-            -output target/universal-apple-darwin/release/cocoa-way
+        run: cargo build --release
 
       - name: Create .app Bundle
         run: |
           APP_NAME="Cocoa-Way"
           APP_DIR="${APP_NAME}.app"
+          VERSION="${GITHUB_REF_NAME#v}"
           mkdir -p "${APP_DIR}/Contents/MacOS"
           mkdir -p "${APP_DIR}/Contents/Resources"
           
-          cp target/universal-apple-darwin/release/cocoa-way "${APP_DIR}/Contents/MacOS/"
+          cp target/release/cocoa-way "${APP_DIR}/Contents/MacOS/"
           cp assets/icon.png "${APP_DIR}/Contents/Resources/AppIcon.png"
           
-          cat > "${APP_DIR}/Contents/Info.plist" << EOF
+          cat > "${APP_DIR}/Contents/Info.plist" << 'PLIST'
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
@@ -64,9 +52,9 @@ jobs:
               <key>CFBundleDisplayName</key>
               <string>Cocoa-Way</string>
               <key>CFBundleVersion</key>
-              <string>${GITHUB_REF_NAME#v}</string>
+              <string>VERSION_PLACEHOLDER</string>
               <key>CFBundleShortVersionString</key>
-              <string>${GITHUB_REF_NAME#v}</string>
+              <string>VERSION_PLACEHOLDER</string>
               <key>CFBundlePackageType</key>
               <string>APPL</string>
               <key>CFBundleIconFile</key>
@@ -79,31 +67,33 @@ jobs:
               <string>public.app-category.developer-tools</string>
           </dict>
           </plist>
-          EOF
+          PLIST
+          sed -i '' "s/VERSION_PLACEHOLDER/${VERSION}/g" "${APP_DIR}/Contents/Info.plist"
 
       - name: Create ZIP archive
         run: |
-          zip -r "Cocoa-Way-${{ github.ref_name }}-universal-macos.zip" Cocoa-Way.app
+          zip -r "Cocoa-Way-${{ github.ref_name }}-arm64-macos.zip" Cocoa-Way.app
 
       - name: Create DMG
         run: |
-          hdiutil create -volname "Cocoa-Way" -srcfolder Cocoa-Way.app -ov -format UDZO "Cocoa-Way-${{ github.ref_name }}-universal-macos.dmg"
+          hdiutil create -volname "Cocoa-Way" -srcfolder Cocoa-Way.app -ov -format UDZO "Cocoa-Way-${{ github.ref_name }}-arm64-macos.dmg"
 
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            Cocoa-Way-${{ github.ref_name }}-universal-macos.zip
-            Cocoa-Way-${{ github.ref_name }}-universal-macos.dmg
+            Cocoa-Way-${{ github.ref_name }}-arm64-macos.zip
+            Cocoa-Way-${{ github.ref_name }}-arm64-macos.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Calculate SHA256
         id: sha
         run: |
-          SHA=$(shasum -a 256 "Cocoa-Way-${{ github.ref_name }}-universal-macos.zip" | cut -d ' ' -f 1)
+          SHA=$(shasum -a 256 "Cocoa-Way-${{ github.ref_name }}-arm64-macos.zip" | cut -d ' ' -f 1)
           echo "sha256=$SHA" >> $GITHUB_OUTPUT
           echo "SHA256: $SHA"
 
     outputs:
       sha256: ${{ steps.sha.outputs.sha256 }}
+
